...
        for isLoading in interactorIsLoading.values {
            if isLoading == true { return }
        }
        
        self.interactorIsLoading = nil
        view?.set(loading: false)
        view?.set(title: "Welcome to the light side")
    }
    
}

extension LightSideScreenPresenter: LightSideScreenPresenterType {
    var view: LightSideScreenViewType? {
...
