...
        for isLoading in interactorIsLoading.values {
            if isLoading == true { return }
        }
        
        self.interactorIsLoading = nil
        view?.set(loading: false)
        view?.set(title: "Welcome to the dark side")
    }
    
}

extension DarkSideScreenPresenter: DarkSideScreenPresenterType {
    var router: DarkSideScreenRouterType? {
...
