...
                nibName: "JediListHeaderView",
                bundle: .main),
            forSupplementaryViewOfKind: UICollectionView.elementKindSectionHeader,
            withReuseIdentifier: "JediListHeader"
        )
        navigationItem.rightBarButtonItem = UIBarButtonItem(
            title: "Dark side",
            style: .plain,
            target: self,
            action: #selector(onDarkSideSelected)
        )
    }
    
...
