...
                nibName: "SithHolocronListHeaderView",
                bundle: .main),
            forSupplementaryViewOfKind: UICollectionView.elementKindSectionHeader,
            withReuseIdentifier: "SithHolocronListHeader"
        )
        navigationItem.rightBarButtonItem = UIBarButtonItem(
            title: "Light side",
            style: .plain,
            target: self,
            action: #selector(onLightSideSelected)
        )
    }
    
...
